--- a/tarea3DWESandreafueyo/src/main/resources/application.properties
+++ b/tarea3DWESandreafueyo/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=tarea3DWESandreafueyo
-spring.datasource.url=jdbc:mysql://localhost:3306/bdtarea3dwes?useSSL=false
+#
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc\:mysql\://localhost\:3306/bdtarea3dwes_andrea?serverTimezone=Europe/Madrid
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
