--- a/tarea3DWESandreafueyo/pom.xml
+++ b/tarea3DWESandreafueyo/pom.xml
@@ -44,22 +44,18 @@
 		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 	
-	<!--
 		<dependency>
-		    <groupId>org.springframework.session</groupId>
-		    <artifactId>spring-session-jdbc</artifactId>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
 		</dependency>
-
 		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-data-jpa</artifactId>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
 		</dependency>
-		
 		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-security</artifactId>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
 		</dependency>
-		-->
 	</dependencies>
 
 	<build>
