--- a/tarea3DWESandreafueyo/pom.xml
+++ b/tarea3DWESandreafueyo/pom.xml
@@ -56,6 +56,10 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.session</groupId>
+		    <artifactId>spring-session-jdbc</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
