--- a/tarea3DWESandreafueyo/src/main/resources/application.properties
+++ b/tarea3DWESandreafueyo/src/main/resources/application.properties
@@ -16,3 +16,11 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 
 server.servlet.session.timeout=6h
+
+# Habilitar Spring Session con JDBC
+spring.session.store-type=jdbc
+# Configure session cookie
+server.servlet.session.cookie.name=MY_SESSION_COOKIE
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
+spring.session.jdbc.initialize-schema: always
